--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -6,7 +6,147 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="eoe.s14007.std.it_college.ac.jp.expertofenglish.ScoreActivity">
 
-    <TextView android:text="Score" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <TextView android:text="Score" android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="80dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:layout_marginTop="20dp"
+            />
+
+        <TextView android:text="@string/tv_total_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40dp"/>
+
+        <TextView android:id="@+id/et_total_score"
+            android:text="@string/tv_total_score"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="70dp"
+            android:gravity="center"
+            android:layout_marginBottom="50dp" />
+
+
+        <TableLayout
+            android:stretchColumns="0,1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom">
+
+            <TableRow
+                android:background="#000000">
+
+                <TextView
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:text="@string/tv_average"
+                    android:textSize="40dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:text="@string/tv_max_score"
+                    android:textSize="40dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_gravity="center"/>
+            </TableRow>
+
+                <TextView
+                    android:id="@+id/tv_word"
+                    android:layout_width="160dp"
+                    android:text="@string/tv_word"
+                    android:textSize="40dp"/>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/tv_word_ave"
+                    android:text="@string/tv_word_ave"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:inputType="number"
+                    android:textSize="40dp"/>
+
+                <TextView
+                    android:id="@+id/tv_word_max"
+                    android:text="@string/tv_word_max"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:textSize="40dp"/>
+
+            </TableRow>
+                <TextView
+                    android:id="@+id/tv_daily"
+                    android:layout_width="160dp"
+                    android:text="@string/tv_daily"
+                    android:textSize="40dp"/>
+            <TableRow>
+                <TextView
+                    android:id="@+id/tv_daily_ave"
+                    android:text="@string/tv_daily_ave"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:textSize="40dp"/>
+                <TextView
+                    android:id="@+id/tv_daily_max"
+                    android:text="@string/tv_daily_max"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:inputType="number"
+                    android:textSize="40dp"/>
+            </TableRow>
+                <TextView
+                    android:id="@+id/tv_slang"
+                    android:layout_width="160dp"
+                    android:text="@string/tv_slang"
+                    android:textSize="40dp"/>
+            <TableRow>
+                <TextView
+                    android:id="@+id/tv_slang_ave"
+                    android:text="@string/tv_slang_ave"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:inputType="number"
+                    android:textSize="40dp" />
+                <TextView
+                    android:id="@+id/tv_slang_max"
+                    android:text="@string/tv_slang_max"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:inputType="number"
+                    android:textSize="40dp" />
+            </TableRow>
+                <TextView
+                    android:id="@+id/tv_business"
+                    android:layout_width="160dp"
+                    android:text="@string/tv_business"
+                    android:textSize="40dp" />
+            <TableRow>
+                <TextView
+                    android:id="@+id/tv_business_ave"
+                    android:text="@string/tv_business_ave"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:inputType="number"
+                    android:textSize="40dp" />
+                <TextView
+                    android:id="@+id/tv_business_max"
+                    android:text="@string/tv_slang_max"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:inputType="number"
+                    android:textSize="40dp" />
+            </TableRow>
+
+        </TableLayout>
+
+    </LinearLayout>
 </RelativeLayout>
