--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -19,13 +19,13 @@
             android:layout_marginTop="20dp"
             />
 
-        <TextView android:text="@string/tv_total_title"
+        <TextView android:text="@string/tv_total_score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="40dp"/>
 
-        <TextView android:id="@+id/et_total_score"
-            android:text="@string/tv_total_score"
+        <TextView android:id="@+id/labelTotalAverage"
+            android:text="@string/labelTotalAverage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="70dp"
@@ -69,7 +69,7 @@
 
                 <TextView
                     android:id="@+id/tv_word_ave"
-                    android:text="@string/tv_word_ave"
+                    android:text="@string/labelWordModeAve"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number"
@@ -77,7 +77,7 @@
 
                 <TextView
                     android:id="@+id/tv_word_max"
-                    android:text="@string/tv_word_max"
+                    android:text="@string/labelWordModeMaxScore"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:textSize="40dp"/>
@@ -91,13 +91,13 @@
             <TableRow>
                 <TextView
                     android:id="@+id/tv_daily_ave"
-                    android:text="@string/tv_daily_ave"
+                    android:text="@string/labelDailyModeAve"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:textSize="40dp"/>
                 <TextView
                     android:id="@+id/tv_daily_max"
-                    android:text="@string/tv_daily_max"
+                    android:text="@string/labelDailyModeMaxScore"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number"
@@ -111,14 +111,14 @@
             <TableRow>
                 <TextView
                     android:id="@+id/tv_slang_ave"
-                    android:text="@string/tv_slang_ave"
+                    android:text="@string/labelSlangModeAve"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number"
                     android:textSize="40dp" />
                 <TextView
                     android:id="@+id/tv_slang_max"
-                    android:text="@string/tv_slang_max"
+                    android:text="@string/labelSlangModeMaxScore"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number"
@@ -132,14 +132,14 @@
             <TableRow>
                 <TextView
                     android:id="@+id/tv_business_ave"
-                    android:text="@string/tv_business_ave"
+                    android:text="@string/labelSlangModeAve"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number"
                     android:textSize="40dp" />
                 <TextView
                     android:id="@+id/tv_business_max"
-                    android:text="@string/tv_slang_max"
+                    android:text="@string/labelSlangModeMaxScore"
                     android:layout_marginRight="5dp"
                     android:layout_marginEnd="5dp"
                     android:inputType="number"
