--- a/app/src/main/res/layout/activity_mode_select.xml
+++ b/app/src/main/res/layout/activity_mode_select.xml
@@ -6,77 +6,90 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="eoe.s14007.std.it_college.ac.jp.expertofenglish.ModeSelect">
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/btnWordMode"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:padding="30dp"
-        android:layout_marginBottom="10dp"/>
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/btnDailyTalkMode"
-        android:layout_below="@+id/btnWordMode"
-        android:layout_centerHorizontal="true"
-        android:padding="30dp"
-        android:layout_marginBottom="10dp"/>
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/btnNetSlangMode"
-        android:layout_below="@+id/btnDailyTalkMode"
-        android:layout_centerHorizontal="true"
-        android:padding="30dp"
-        android:layout_marginBottom="10dp"/>
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/btnBusinessMode"
-        android:layout_below="@+id/btnNetSlangMode"
-        android:layout_centerHorizontal="true"
-        android:padding="30dp"
-        android:layout_marginBottom="10dp"/>
-
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnBusinessMode"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/btnBack"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginRight="10dp"
-            android:padding="30dp"/>
-            </LinearLayout>
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
-        <LinearLayout
+        <Button
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:text="@string/btnWordMode"
+            android:id="@+id/btnWordMode"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="40dp"
+            android:padding="40dp"
+            android:layout_marginBottom="10dp"/>
+
         <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnDailyTalkMode"
+            android:id="@+id/btnDailyTalkMode"
+            android:layout_below="@+id/btnWordMode"
+            android:layout_centerHorizontal="true"
+            android:textSize="40dp"
+            android:padding="40dp"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnNetSlangMode"
+            android:id="@+id/btnNetSlangMode"
+            android:layout_below="@+id/btnDailyTalkMode"
+            android:layout_centerHorizontal="true"
+            android:textSize="40dp"
+            android:padding="40dp"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnBusinessMode"
+            android:id="@+id/btnBusinessMode"
+            android:layout_below="@+id/btnNetSlangMode"
+            android:layout_centerHorizontal="true"
+            android:textSize="40dp"
+            android:padding="40dp"
+            android:layout_marginBottom="10dp"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/btnScoreShow"
-            android:padding="30dp"/>
-            </LinearLayout>
+            android:layout_below="@+id/btnBusinessMode"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/linearLayout">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:id="@+id/btnBack"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginRight="10dp"
+                android:textSize="40dp"
+                android:paddingRight="70dp"
+                android:paddingLeft="70dp"
+                android:paddingTop="40dp"
+                android:paddingBottom="40dp"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btnScoreShow"
+                android:id="@+id/btnScoreShow"
+                android:textSize="40dp"
+                android:paddingTop="40dp"
+                android:paddingBottom="40dp"
+                android:paddingLeft="100dp"
+                android:paddingRight="100dp"/>
 
+        </LinearLayout>
     </LinearLayout>
+
+
 
 </RelativeLayout>
